list view working and change from text/description to name/park - location

--- a/DWPennyFinder/AppShell.xaml
+++ b/DWPennyFinder/AppShell.xaml
@@ -31,7 +31,7 @@
 
     <TabBar>
         <ShellContent Title="Pennies List" Icon="icon_feed.png" Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" /> 
-        <ShellContent Title="Browse" Icon="icon_feed.png" Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />
+        <!--<ShellContent Title="Browse" Icon="icon_feed.png" Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />-->
         <ShellContent Title="About" Icon="icon_about.png" Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
     </TabBar>
 
