--- a/DWPennyFinder/Views/ItemDetailPage.xaml
+++ b/DWPennyFinder/Views/ItemDetailPage.xaml
@@ -5,10 +5,12 @@
              Title="{Binding Title}">
 
     <StackLayout Spacing="20" Padding="15">
-        <Label Text="Text:" FontSize="Medium" />
-        <Label Text="{Binding Text}" FontSize="Small"/>
-        <Label Text="Description:" FontSize="Medium" />
-        <Label Text="{Binding Description}" FontSize="Small"/>
+        <Label Text="Name:" FontSize="Medium" />
+        <Label Text="{Binding Name}" FontSize="Small"/>
+        <Label Text="Park:" FontSize="Medium" />
+        <Label Text="{Binding Park}" FontSize="Small"/>
+         <Label Text="Location:" FontSize="Medium" />
+        <Label Text="{Binding Location}" FontSize="Small"/>
     </StackLayout>
     
 </ContentPage>
