--- a/DWPennyFinder/Views/ItemsPage.xaml
+++ b/DWPennyFinder/Views/ItemsPage.xaml
@@ -1,20 +1,50 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+﻿<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DWPennyFinder.Views.ItemsPage"
-             xmlns:local="clr-namespace:DWPennyFinder.ViewModels"
-             xmlns:local1="clr-namespace:DWPennyFinder.Views"
-             Title="Items">
-    <ContentPage.BindingContext>
-        <local:ItemsViewModel />
-    </ContentPage.BindingContext>
-    <StackLayout>
-        <CollectionView ItemsSource="{Binding Items}">
+             Title="{Binding Title}"
+             xmlns:local="clr-namespace:DWPennyFinder.ViewModels"  
+             xmlns:model="clr-namespace:DWPennyFinder.Models"  
+             x:Name="BrowseItemsPage">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Add" Command="{Binding AddItemCommand}" />
+    </ContentPage.ToolbarItems>
+    <!--
+      x:DataType enables compiled bindings for better performance and compile time validation of binding expressions.
+      https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/data-binding/compiled-bindings
+    -->
+    <RefreshView x:DataType="local:ItemsViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+        <CollectionView x:Name="ItemsListView"
+                ItemsSource="{Binding Items}"
+                SelectionMode="None">
             <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <local1:ItemsView BindingContext="{Binding}" />
+               <DataTemplate>
+                     <StackLayout Padding="10" x:DataType="model:Item">
+                        <Label Text="{Binding Name}" 
+                            LineBreakMode="NoWrap" 
+                            Style="{DynamicResource ListItemTextStyle}" 
+                            FontSize="16" />
+                        <Label LineBreakMode="NoWrap"
+                            Style="{DynamicResource ListItemDetailTextStyle}"
+                            FontSize="13" >
+                        <Label.Text>
+                            <MultiBinding Converter="{StaticResource LocationParkConverter}">
+                                <Binding Path="Park" />
+                                <Binding Path="Location" />
+                                </MultiBinding>
+                            </Label.Text>
+                        </Label>
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer 
+                                NumberOfTapsRequired="1"
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type local:ItemsViewModel}}, Path=ItemTapped}"		
+                                CommandParameter="{Binding .}">
+                            </TapGestureRecognizer>
+                        </StackLayout.GestureRecognizers>
+                    </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
-    </StackLayout>
+    </RefreshView>
 </ContentPage>
+
