working map pin - thanks dad

--- a/DWPennyFinder/AppShell.xaml
+++ b/DWPennyFinder/AppShell.xaml
@@ -33,6 +33,8 @@
         <ShellContent Title="Pennies List" Icon="icon_feed.png" Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" /> 
         <!--<ShellContent Title="Browse" Icon="icon_feed.png" Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />-->
         <ShellContent Title="About" Icon="icon_about.png" Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
+    <ShellContent Title="Maps" Icon="icon_about.png" Route="MapPage" ContentTemplate="{DataTemplate local:MapPage}" />
+   
     </TabBar>
 
     <!--
