--- a/DWPennyFinder/Views/MapPage.xaml
+++ b/DWPennyFinder/Views/MapPage.xaml
@@ -2,14 +2,15 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DWPennyFinder.Views.MapPage"
-             xmlns:maps="clr-namespace:Xamarin.Forms.GoogleMaps;assembly=Xamarin.Forms.GoogleMaps">
+             xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
+             xmlns:viewmodels="clr-namespace:DWPennyFinder.ViewModels"
+             x:DataType="viewmodels:ItemsViewModel"
+             Title="{Binding Title}">
 
-     <maps:Map x:Name="map"
-              MyLocationEnabled="True">
-        <maps:Map.Pins>
-            <maps:Pin/>
-        </maps:Map.Pins>
-    </maps:Map>
+    <StackLayout Margin="10">
+        <maps:Map x:Name="map">
+           
+        </maps:Map>
+    </StackLayout>
+
 </ContentPage>
-
-
