map pin display

--- a/DWPennyFinder/AppShell.xaml
+++ b/DWPennyFinder/AppShell.xaml
@@ -31,9 +31,9 @@
 
     <TabBar>
         <ShellContent Title="Pennies List" Icon="icon_feed.png" Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" /> 
+        <ShellContent Title="Map View" Icon="icon_wp_map.png" Route="MapPage" ContentTemplate="{DataTemplate local:MapPage}" />
         <!--<ShellContent Title="Browse" Icon="icon_feed.png" Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />-->
         <ShellContent Title="About" Icon="icon_about.png" Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
-    <ShellContent Title="Maps" Icon="icon_about.png" Route="MapPage" ContentTemplate="{DataTemplate local:MapPage}" />
    
     </TabBar>
 
