--- a/DWPennyFinder/Views/MapPage.xaml
+++ b/DWPennyFinder/Views/MapPage.xaml
@@ -12,8 +12,7 @@
 
     <StackLayout Margin="10">
         
-        <local:CustomMap x:Name="customMap"
-                     MapType="Street" />
+        <local:CustomMap x:Name="customMap" MapType="Street"  />
             <Slider x:Name= "slider" Margin="20,0,20,0"
             Maximum="20"
             Minimum="10"
