--- a/DWPennyFinder/AppShell.xaml
+++ b/DWPennyFinder/AppShell.xaml
@@ -33,7 +33,7 @@
         <ShellContent Title="Pennies List" Icon="icon_feed.png" Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" /> 
         <ShellContent Title="Map View" Icon="icon_wp_map.png" Route="MapPage" ContentTemplate="{DataTemplate local:MapPage}" />
         <!--<ShellContent Title="Browse" Icon="icon_feed.png" Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />-->
-        <ShellContent Title="About" Icon="icon_about.png" Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
+       <!-- <ShellContent Title="About" Icon="icon_about.png" Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />-->
    
     </TabBar>
 
