--- a/DWPennyFinder/Views/AboutPage.xaml
+++ b/DWPennyFinder/Views/AboutPage.xaml
@@ -11,7 +11,7 @@
     
     <ContentPage.Resources>
         <ResourceDictionary>
-            <Color x:Key="Accent">Cyan</Color>
+            <Color x:Key="Accent">#886EB6</Color>
         </ResourceDictionary>
     </ContentPage.Resources>
 
