--- a/DWPennyFinder/Views/ItemsPage.xaml
+++ b/DWPennyFinder/Views/ItemsPage.xaml
@@ -17,33 +17,46 @@
         <CollectionView x:Name="ItemsListView"
                 ItemsSource="{Binding Items}"
                 SelectionMode="None">
-            <CollectionView.ItemTemplate>
-               <DataTemplate>
-                     <StackLayout Padding="10" x:DataType="model:Item">
-                        <Label Text="{Binding Name}" 
-                            LineBreakMode="NoWrap" 
-                            Style="{DynamicResource ListItemTextStyle}" 
-                            FontSize="16" />
-                        <Label LineBreakMode="NoWrap"
-                            Style="{DynamicResource ListItemDetailTextStyle}"
-                            FontSize="13" >
+       <CollectionView.ItemTemplate>
+    <DataTemplate>
+        <ContentView Padding="10" x:DataType="model:Item">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <StackLayout Grid.Column="0">
+                    <Label Text="{Binding Name}" 
+                        LineBreakMode="NoWrap" 
+                        Style="{DynamicResource ListItemTextStyle}" 
+                        FontSize="16" />
+                    <Label LineBreakMode="NoWrap"
+                        Style="{DynamicResource ListItemDetailTextStyle}"
+                        FontSize="13">
                         <Label.Text>
                             <MultiBinding Converter="{StaticResource LocationParkConverter}">
                                 <Binding Path="Park" />
                                 <Binding Path="Location" />
-                                </MultiBinding>
-                            </Label.Text>
-                        </Label>
-                        <StackLayout.GestureRecognizers>
-                            <TapGestureRecognizer 
-                                NumberOfTapsRequired="1"
-                                Command="{Binding Source={RelativeSource AncestorType={x:Type local:ItemsViewModel}}, Path=ItemTapped}"		
-                                CommandParameter="{Binding .}">
-                            </TapGestureRecognizer>
-                        </StackLayout.GestureRecognizers>
-                    </StackLayout>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
+                            </MultiBinding>
+                        </Label.Text>
+                    </Label>
+                </StackLayout>
+
+                <Image Grid.Column="1" Source="mouse_30x30.png" IsVisible="{Binding IsSelected}" />
+            </Grid>
+
+            <ContentView.GestureRecognizers>
+                <TapGestureRecognizer 
+                    NumberOfTapsRequired="1"
+                    Command="{Binding Source={RelativeSource AncestorType={x:Type local:ItemsViewModel}}, Path=ItemTapped}"		
+                    CommandParameter="{Binding .}">
+                </TapGestureRecognizer>
+            </ContentView.GestureRecognizers>
+        </ContentView>
+    </DataTemplate>
+</CollectionView.ItemTemplate>
+
         </CollectionView>
     </RefreshView>
 </ContentPage>
