--- a/DWPennyFinder/Views/NewItemPage.xaml
+++ b/DWPennyFinder/Views/NewItemPage.xaml
@@ -9,11 +9,11 @@
     <ContentPage.Content>
         <StackLayout Spacing="3" Padding="15">
             <Label Text="Name" FontSize="Medium" />
-            <Entry Text="{Binding Name, Mode=TwoWay}" FontSize="Medium" />
+            <Entry Text="{Binding _item.Name, Mode=TwoWay}" FontSize="Medium" />
             <Label Text="Park" FontSize="Medium" />
-            <Editor Text="{Binding Park, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" />
+            <Editor Text="{Binding Location.Name, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" />
             <Label Text="Location" FontSize="Medium" />
-            <Editor Text="{Binding Location, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" />
+            <Editor Text="{Binding Machine.Name, Mode=TwoWay}" AutoSize="TextChanges" FontSize="Medium" Margin="0" />
             <StackLayout Orientation="Horizontal">
                 <Button Text="Cancel" Command="{Binding CancelCommand}" HorizontalOptions="FillAndExpand"></Button>
                 <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"></Button>
