--- a/DWPennyFinder/Views/ItemsPage.xaml
+++ b/DWPennyFinder/Views/ItemsPage.xaml
@@ -18,30 +18,46 @@
                 ItemsSource="{Binding Items}"
                 SelectionMode="None">
             <CollectionView.ItemTemplate>
+
                <DataTemplate>
-                     <StackLayout Padding="10" x:DataType="model:ItemDetail">
-                        <Label Text="{Binding item.Name}" 
+                    <ContentView Padding="10" x:DataType="model:ItemDetail">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+
+                            <StackLayout Padding="10" x:DataType="model:ItemDetail" Grid.Row="0">
+                                <Label Text="{Binding item.Name}" 
                             LineBreakMode="NoWrap" 
                             Style="{DynamicResource ListItemTextStyle}" 
                             FontSize="16" />
-                        <Label LineBreakMode="NoWrap"
+                                <Label LineBreakMode="NoWrap"
                             Style="{DynamicResource ListItemDetailTextStyle}"
                             FontSize="13" >
-                            <Label.Text>
-                                <MultiBinding Converter="{StaticResource LocationParkConverter}">
-                                    <Binding Path="location.name" />
-                                    <Binding Path="machine.name" />
-                                </MultiBinding>
-                            </Label.Text>
-                        </Label>
-                        <StackLayout.GestureRecognizers>
+                                    <Label.Text>
+                                        <MultiBinding Converter="{StaticResource LocationParkConverter}">
+                                            <Binding Path="location.name" />
+                                            <Binding Path="machine.name" />
+                                        </MultiBinding>
+                                    </Label.Text>
+                                </Label>
+
+                            </StackLayout>
+
+                            <Image Grid.Column="1" Source="mouse_30x30.png" IsVisible="{Binding item.Collected}" />
+                        </Grid>
+                        
+                        
+                        <ContentView.GestureRecognizers>
                             <TapGestureRecognizer 
                                 NumberOfTapsRequired="1"
                                 Command="{Binding Source={RelativeSource AncestorType={x:Type local:ItemsViewModel}}, Path=ItemTapped}"		
                                 CommandParameter="{Binding .}">
                             </TapGestureRecognizer>
-                        </StackLayout.GestureRecognizers>
-                    </StackLayout>
+                        </ContentView.GestureRecognizers>
+                    </ContentView>
+
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
