--- a/DWPennyFinder/Views/ItemsPage.xaml
+++ b/DWPennyFinder/Views/ItemsPage.xaml
@@ -28,7 +28,7 @@
                                 IconImageSource="insert-coin48.png"
                                 Command="{Binding Source={RelativeSource AncestorType={x:Type local:ItemsViewModel}}, Path=ItemCollected}"		
                                 CommandParameter="{Binding Source={RelativeSource Self}, Path=BindingContext}"/>
-                            <SwipeItem Text="Delete"
+                            <SwipeItem Text="Undo"
                                 BackgroundColor="Gray"
                                 IconImageSource="undo48.png"
                                 Command="{Binding Source={RelativeSource AncestorType={x:Type local:ItemsViewModel}}, Path=ItemRemoved}"		
