--- a/DWPennyFinder/Views/FilterPage.xaml
+++ b/DWPennyFinder/Views/FilterPage.xaml
@@ -25,7 +25,7 @@ HasBackgroundAnimation="True"/>
 </Grid.ColumnDefinitions>
 <Label Text="Filter" Grid.Column="0"/>
 </Grid>
-<Grid Margin="10,20,10,10">
+<Grid x:Name="FilterButtonGrid" Margin="10,20,10,10">
 <Grid.RowDefinitions>
 <RowDefinition Height="Auto"/>
 <RowDefinition Height="Auto"/>
@@ -59,7 +59,7 @@ HasBackgroundAnimation="True"/>
 </Grid.ColumnDefinitions>
                     </Grid>
                 <Label Text="Sort" Grid.Row="5" Margin="0,20,0,10"/>
-<Grid Margin="10,0,10,10" Grid.Row="6">
+<Grid  x:Name="SortButtonGrid" Margin="10,0,10,10" Grid.Row="6">
     <Grid.RowDefinitions>
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="Auto"/>
