--- a/DWPennyFinder.iOS/Resources/LaunchScreen.storyboard
+++ b/DWPennyFinder.iOS/Resources/LaunchScreen.storyboard
@@ -19,13 +19,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="screenwords.png" translatesAutoresizingMaskIntoConstraints="NO" id="sYq-9z-zxj">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="screenwords.png" translatesAutoresizingMaskIntoConstraints="NO" id="sYq-9z-zxj">
                                 <rect key="frame" x="-94" y="0.0" width="581" height="946"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="581" id="8zC-ul-H33"/>
+                                    <constraint firstAttribute="height" constant="946" id="kS0-tY-S56"/>
+                                </constraints>
                                 <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.53333333333333333" green="0.43137254901960786" blue="0.71372549019607845" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="sYq-9z-zxj" firstAttribute="top" secondItem="yd7-JS-zBw" secondAttribute="topMargin" constant="-59" id="5qY-fP-Y06"/>
+                            <constraint firstItem="sYq-9z-zxj" firstAttribute="centerX" secondItem="yd7-JS-zBw" secondAttribute="centerX" id="Xh0-sH-IbC"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XAI-xm-WK6" userLabel="First Responder" sceneMemberID="firstResponder"/>
