--- a/DWPennyFinder/Views/FilterPage.xaml
+++ b/DWPennyFinder/Views/FilterPage.xaml
@@ -1,84 +1,82 @@
 ﻿<rg:PopupPage xmlns:rg="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
-xmlns="http://xamarin.com/schemas/2014/forms"
-xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-x:Class="DWPennyFinder.Views.FilterPage"
-xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
-x:Name="view">
-<rg:PopupPage.Animation>
-<animations:ScaleAnimation PositionIn="Bottom"
-PositionOut="Bottom"
-DurationIn="400"
-DurationOut="300"
-EasingIn="SinOut"
-EasingOut="SinIn"
-HasBackgroundAnimation="True"/>
-</rg:PopupPage.Animation>
-<StackLayout Padding="0" VerticalOptions="EndAndExpand" HorizontalOptions="FillAndExpand">
-
-<Frame HasShadow="True" CornerRadius="20" HeightRequest="300">
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class="DWPennyFinder.Views.FilterPage"
+    xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
+    x:Name="view">
+    <rg:PopupPage.Animation>
+        <animations:ScaleAnimation PositionIn="Bottom"
+        PositionOut="Bottom"
+        DurationIn="400"
+        DurationOut="300"
+        EasingIn="SinOut"
+        EasingOut="SinIn"
+        HasBackgroundAnimation="True"/>
+    </rg:PopupPage.Animation>
+    <StackLayout Padding="0" VerticalOptions="EndAndExpand" HorizontalOptions="FillAndExpand">
+        <Frame HasShadow="True" CornerRadius="20" HeightRequest="425">
             <ScrollView>
-<StackLayout>
-<Grid MinimumHeightRequest="50" VerticalOptions="CenterAndExpand">
-<Grid.ColumnDefinitions>
-<ColumnDefinition Width="*"/>
-<ColumnDefinition Width="Auto"/>
-</Grid.ColumnDefinitions>
-<Label Text="Filter" Grid.Column="0"/>
-</Grid>
-<Grid x:Name="FilterButtonGrid" Margin="10,20,10,10">
-<Grid.RowDefinitions>
-<RowDefinition Height="Auto"/>
-<RowDefinition Height="Auto"/>
-<RowDefinition Height="Auto"/>
-<RowDefinition Height="Auto"/>
-</Grid.RowDefinitions>
-<Grid.ColumnDefinitions>
-<ColumnDefinition Width="*"/>
-<ColumnDefinition Width="*"/>
-</Grid.ColumnDefinitions>
-<Button Text="Animal Kingdom" Clicked="OnFilterButtonClicked"/>
-<Button Text="Magic Kingdom" Clicked="OnFilterButtonClicked" Grid.Column="1"/>
-<Button Text="Epcot" Clicked="OnFilterButtonClicked" Grid.Row="1"/>
-<Button Text="Hollywood Studios" Clicked="OnFilterButtonClicked" Grid.Row="1" Grid.Column="1"/>
-<Button Text="Disney Springs" Clicked="OnFilterButtonClicked" Grid.Row="2"/>
-<Button Text="Resorts" Clicked="OnFilterButtonClicked" Grid.Row="2" Grid.Column="1"/>
-<Button Text="Collected" Clicked="OnFilterButtonClicked" Grid.Row="3"/>
-<Button Text="Uncollected" Clicked="OnFilterButtonClicked" Grid.Row="3" Grid.Column="1"/>
-<Button Text="Clear Filter" Clicked="OnFilterButtonClicked" Grid.Row="4" Grid.ColumnSpan="2" BackgroundColor="Gray" TextColor="White"/>
-</Grid>
-
-                <Grid Margin="10,20,10,10">
-<Grid.RowDefinitions>
-<RowDefinition Height="Auto" />
-<RowDefinition Height="Auto" />
-<RowDefinition Height="Auto" />
-</Grid.RowDefinitions>
-<Grid.ColumnDefinitions>
-<ColumnDefinition Width="*"/>
-<ColumnDefinition Width="*"/>
-</Grid.ColumnDefinitions>
+                <StackLayout>
+                    <Grid MinimumHeightRequest="40" VerticalOptions="CenterAndExpand">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Text="Filter" Grid.Column="0"/>
                     </Grid>
-                <Label Text="Sort" Grid.Row="5" Margin="0,20,0,10"/>
-<Grid  x:Name="SortButtonGrid" Margin="10,0,10,10" Grid.Row="6">
-    <Grid.RowDefinitions>
-        <RowDefinition Height="Auto"/>
-        <RowDefinition Height="Auto"/>
-    </Grid.RowDefinitions>
-    <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*"/>
-        <ColumnDefinition Width="*"/>
-    </Grid.ColumnDefinitions>
-    <Button Text="Name A-Z" Clicked="OnSortButtonClicked"/>
-    <Button Text="Name Z-A" Clicked="OnSortButtonClicked" Grid.Column="1"/>
-    <Button Text="Location A-Z" Clicked="OnSortButtonClicked" Grid.Row="1"/>
-    <Button Text="Location Z-A" Clicked="OnSortButtonClicked" Grid.Row="1" Grid.Column="1"/>
-    <Button Text="Collected - Uncollected" Clicked="OnSortButtonClicked" Grid.Row="2"/>
-    <Button Text="Uncollected - Collected" Clicked="OnSortButtonClicked" Grid.Row="2" Grid.Column="1"/>
-                        <Button Text="Clear Sort" Clicked="OnSortButtonClicked" Grid.Row="3" Grid.ColumnSpan="2" BackgroundColor="Gray" TextColor="White"/>
+                    <Grid x:Name="FilterButtonGrid" Margin="5,5,5,5">
+                        <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                            <Button Text="Animal Kingdom" Clicked="OnFilterButtonClicked"/>
+                            <Button Text="Magic Kingdom" Clicked="OnFilterButtonClicked" Grid.Column="1"/>
+                            <Button Text="Epcot" Clicked="OnFilterButtonClicked" Grid.Row="1"/>
+                            <Button Text="Hollywood Studios" Clicked="OnFilterButtonClicked" Grid.Row="1" Grid.Column="1"/>
+                            <Button Text="Disney Springs" Clicked="OnFilterButtonClicked" Grid.Row="2"/>
+                            <Button Text="Resorts" Clicked="OnFilterButtonClicked" Grid.Row="2" Grid.Column="1"/>
+                            <Button Text="Collected" Clicked="OnFilterButtonClicked" Grid.Row="3"/>
+                            <Button Text="Uncollected" Clicked="OnFilterButtonClicked" Grid.Row="3" Grid.Column="1"/>
+                            <Button Text="Clear Filter" Clicked="OnFilterButtonClicked" Grid.Row="4" Grid.ColumnSpan="2" BackgroundColor="Gray" TextColor="White"/>
+                        </Grid>
 
-</Grid>
-</StackLayout>
+                        <Grid Margin="5,5,5,5">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        </Grid>
+                    <Label Text="Sort" Grid.Row="5" Margin="0, 5,0,5"/>
+                    <Grid  x:Name="SortButtonGrid" Margin="5,5, 5, 5" Grid.Row="6">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Button Text="Name A-Z" Clicked="OnSortButtonClicked"/>
+                        <Button Text="Name Z-A" Clicked="OnSortButtonClicked" Grid.Column="1"/>
+                        <Button Text="Location A-Z" Clicked="OnSortButtonClicked" Grid.Row="1"/>
+                        <Button Text="Location Z-A" Clicked="OnSortButtonClicked" Grid.Row="1" Grid.Column="1"/>
+                        <Button Text="Collected - Uncollected" Clicked="OnSortButtonClicked" Grid.Row="2"/>
+                        <Button Text="Uncollected - Collected" Clicked="OnSortButtonClicked" Grid.Row="2" Grid.Column="1"/>
+                        <Button Text="Clear Sort" Clicked="OnSortButtonClicked" Grid.Row="3" Grid.ColumnSpan="2" BackgroundColor="Gray" TextColor="White"/>
+                    </Grid>
+                </StackLayout>
             </ScrollView>
-</Frame>
-</StackLayout>
+        </Frame>
+    </StackLayout>
 </rg:PopupPage>
